--- a/Week 1/Day 00/ex03/mySecondPage.html
+++ b/Week 1/Day 00/ex03/mySecondPage.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -10,7 +8,7 @@
 	<style type="text/css">
 
 		/* .navbar {
-			align-items: center;
+			margin-bottom: 15px;
 		} */
 
 		.title {
@@ -24,7 +22,7 @@
 		}
 		
 		body {
-			font-size: 35px;
+			font-size: 25px;
 		}
 		
 		table {
@@ -33,7 +31,7 @@
 			position: relative;
 			width: 100%;
 			height: 100%;
-			margin-top: 100px;
+			margin-top: 85px;
 		}
 
 		/* th {
@@ -47,8 +45,33 @@
 		}
 
 		.responsive {
-  			max-width: 100%;
+  			max-width: 50%;
 			height: auto;
+			width: "700";
+			height: "700";
+		}
+
+		hr {
+			margin-top: 15%;
+			margin-bottom: 2%;
+			border-top: 1px double #ae0707cc;
+		}
+
+		p {
+			font-size: 18px;
+			margin-top: 1px;
+			text-align: right;
+			margin-right: 7.5%;
+			font-style: italic;
+			color: white;
+		}
+
+		footer {
+    		/* height: 50px;  */
+    		width:100%;
+    		position: absolute;
+			/* position: relative; */
+    		bottom: 15px;
 		}
 
 	</style>
@@ -57,25 +80,39 @@
 			<div class="title">B@sics</div>
 				<table>
 					<thead>
-						<tr>
-							<th>
-								<img src="https://static.cardmarket.com/img/75b96e78c35ea027396cde754c99f595/Downloads/Logos/CardmarketLogoBlue3.png" alt="Avatar" class="responsive" width="700" height="700">
-							</th>
-							<th>
-								<img src="https://companieslogo.com/img/orig/AMZN-e9f942e4.png?t=1632523695" alt="Avatar" class="responsive" width="700" height="700">
-							</th>
-						</tr>
-						<tr>
-							<th>
-								<a href="https://www.cardmarket.com/"> Visit CardMarket</a>
-							</th>
-							<th>
-								<a href="https://www.amazon.com">Visit Amazon</a>
-							</th>
-						</tr>
+						<div>
+							<tr>
+								<th>
+									<img src="https://static.cardmarket.com/img/75b96e78c35ea027396cde754c99f595/Downloads/Logos/CardmarketLogoBlue3.png" alt="Avatar" class="responsive">
+								</th>
+								<th>
+									<img src="https://static.cardmarket.com/img/75b96e78c35ea027396cde754c99f595/Downloads/Logos/CardmarketLogoBlue3.png" alt="Avatar" class="responsive">
+								</th>
+							</tr>
+						</div>
+						<div>
+							<tr>
+								<th>
+									<a href="https://www.cardmarket.com/"> Visit CardMarket</a>
+								</th>
+								<th>
+									<a href="https://www.amazon.com">Visit CardMarket</a>
+								</th>
+							</tr>
+						</div>
 
 					</thead>
 				</table>
 		</nav>
+		<!-- <div>
+			<hr style="width:85%; text-align:center; position:relative">
+			<p>&#169Aperrone2023</p>
+		</div> -->
 	</body>
+	<footer>
+		<div>
+			<hr style="width:85%; text-align:center">
+			<p>&#169Aperrone2023</p>
+		</div>
+	</footer>
 </html>
