script quasi ok

--- a/Week 1/Day 01/exBonus/bonus.html
+++ b/Week 1/Day 01/exBonus/bonus.html
@@ -17,17 +17,18 @@
 				</tr>
 			<tr>
 				<td>
-					<label for="lastName">Last Name:</lsabel>
+					<label for="lastName">Last Name:</label>
 					<input type="text" id="lastName" maxlength="50">
 					<span id="errorMsg"></span>
 					<script src="scripts/lastName.js"></script>
+
 				</td>
 			</tr>
 			<tr>
 				<td>
 					<label for="firstName">First Name:</label>
 					<input type="text" id="firstName" maxlength="50">
-					<span id="errorMsg"></span>
+					<span id="errorMsg2"></span>
 					<script src="scripts/firstName.js"></script>
 				</td>
 			</tr>
@@ -65,8 +66,8 @@
 			</tr>
 			<tr>
 				<td>
-					<label for="text-box">Job description (max 500 chars):</label>
-					<textarea id="text-box" style="resize:vertical" maxlength="500"></textarea>
+					<label for="text-box">Job description (max 80 chars):</label>
+					<textarea id="text-box" style="resize:vertical" maxlength="80"></textarea>
 				</td>
 			</tr>
 			<tr>
