--- a/Week 1/Day 01/exBonus/bonus.html
+++ b/Week 1/Day 01/exBonus/bonus.html
@@ -6,30 +6,29 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title> Bonus </title>
 		<link rel="stylesheet" type="text/css" href="bonus.css">
+		<script src="scripts/errorContol.js"></script>
 		<!-- <script type="text/javascript" src="ohWowA.js"></script> -->
 	</head>
 	<body>
 		<table>
-				<tr>
-					<td colspan="2" align="center">
-						<b>Registrazione al servizio</b>
-					</td>
-				</tr>
+			<tr>
+				<td colspan="2" align="center">
+					<b>Registrazione al servizio</b>
+				</td>
+			</tr>
 			<tr>
 				<td>
 					<label for="lastName">Last Name:</label>
-					<input type="text" id="lastName" maxlength="50">
+					<input type="text" id="lastName" maxlength="50" oninput="control('lastName', 'errorMsg')">
 					<span id="errorMsg"></span>
-					<script src="scripts/lastName.js"></script>
-
+					
 				</td>
 			</tr>
 			<tr>
 				<td>
 					<label for="firstName">First Name:</label>
-					<input type="text" id="firstName" maxlength="50">
+					<input type="text" id="firstName" maxlength="50" oninput="control('firstName', 'errorMsg2')">
 					<span id="errorMsg2"></span>
-					<script src="scripts/firstName.js"></script>
 				</td>
 			</tr>
 			<tr>
@@ -55,7 +54,8 @@
 			<tr>
 				<td>
 					<label for="zipcode">Zipcode:</label>
-					<input type="password" id="zipcode" maxlength="5">
+					<input type="password" id="zipcode" minlength="5" maxlength="5" oninput="controlZip('zipcode', 'errorMsg3')">
+					<span id="errorMsg3"></span>
 				</td>
 			</tr>
 			<tr>
