--- a/Week 1/Day 01/exBonus/bonus.html
+++ b/Week 1/Day 01/exBonus/bonus.html
@@ -16,72 +16,75 @@
 					<b>Registrazione al servizio</b>
 				</td>
 			</tr>
-			<tr>
-				<td>
-					<label for="lastName">Last Name:</label>
-					<input type="text" id="lastName" maxlength="50" oninput="control('lastName', 'errorMsg')">
-					<span id="errorMsg"></span>
-					
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<label for="firstName">First Name:</label>
-					<input type="text" id="firstName" maxlength="50" oninput="control('firstName', 'errorMsg2')">
-					<span id="errorMsg2"></span>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<label>
-						<input type="radio" name="gender" value="M" checked>Male
-					</label>
-					<label>
-						<input type="radio" name="gender" value="F">Female
-					</label>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<label for="menu">University:</label>
-					<select id="menu">
-					<option value="Roma 3">Roma 3</option>
-					<option value="Sapienza">Sapienza</option>
-					<option value="Luiss">Luiss</option>
-					</select>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<label for="zipcode">Zipcode:</label>
-					<input type="password" id="zipcode" minlength="5" maxlength="5" oninput="controlZip('zipcode', 'errorMsg3')">
-					<span id="errorMsg3"></span>
-				</td> 
-			</tr>
-			<tr>
-				<td>
-					<label for="studentWorker">Student worker:</label>
-					<input type="checkbox" id="studentWorker">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<label for="text-box">Job description (max 80 chars):</label>
-					<textarea id="text-box" style="resize:vertical" maxlength="80"></textarea>
-				</td>
-			</tr>
-			<tr>
-				<td colspan="1" align="left"><input type="button" value="Invia" onClick="Modulo()">
-				</td>
-				<td colspan="2" align="right"><input type="button" value="Reset" onClick="Modulo()">
-				</td>
-			</tr>
-		</table>
-	</body>
-	<footer>
-		<div>
-			<hr>
-			<p>&#169Aperrone2023</p>
+			<form id="megaform">
+				<tr>
+					<td>
+						<label for="lastName">Last Name:</label>
+						<input type="text" id="lastName" maxlength="50" oninput="control('lastName', 'errorMsg')">
+						<span id="errorMsg"></span>
+						
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<label for="firstName">First Name:</label>
+						<input type="text" id="firstName" maxlength="50" oninput="control('firstName', 'errorMsg2')">
+						<span id="errorMsg2"></span>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<label>
+							<input type="radio" name="gender" value="M" checked>Male
+						</label>
+						<label>
+							<input type="radio" name="gender" value="F">Female
+						</label>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<label for="menu">University:</label>
+						<select id="menu">
+							<option value="Select">Select</option>
+							<option value="Roma 3">Roma 3</option>
+							<option value="Sapienza">Sapienza</option>
+							<option value="Luiss">Luiss</option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<label for="zipcode">Zipcode:</label>
+						<input type="password" id="zipcode" minlength="5" maxlength="5" oninput="controlZip('zipcode', 'errorMsg3')">
+						<span id="errorMsg3"></span>
+					</td> 
+				</tr>
+				<tr>
+					<td>
+						<label for="studentWorker">Student worker:</label>
+						<input type="checkbox" id="studentWorker">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<label for="text-box">Job description (max 80 chars):</label>
+						<textarea id="text-box" style="resize:vertical" maxlength="80"></textarea>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="1" align="left"><input type="button" value="Invia" onClick="Modulo()">
+					</td>
+					<td colspan="2" align="right"><input type="button" value="Reset" onclick="resetForm()">
+					</td>
+				</tr>
+			</form>
+			</table>
+		</body>
+		<footer>
+			<div>
+				<hr>
+				<p>&#169Aperrone2023</p>
 		</div>
 	</footer>
 </html>
