--- a/Week 1/Day 01/exBonus/bonus.html
+++ b/Week 1/Day 01/exBonus/bonus.html
@@ -16,6 +16,7 @@
 					<b>Registrazione al servizio</b>
 				</td>
 			</tr>
+			<form id="megaform">
 			<tr>
 				<td>
 					<label for="lastName">Last Name:</label>
@@ -73,9 +74,10 @@
 			<tr>
 				<td colspan="1" align="left"><input type="button" value="Invia" onClick="Modulo()">
 				</td>
-				<td colspan="2" align="right"><input type="button" value="Reset" onClick="Modulo()">
+				<td colspan="2" align="right"><input type="button" value="Reset" onclick="resetForm()">
 				</td>
 			</tr>
+			</form>
 		</table>
 	</body>
 	<footer>
