--- a/Week 1/Day 01/exBonus/bonus.html
+++ b/Week 1/Day 01/exBonus/bonus.html
@@ -35,10 +35,10 @@
 			<tr>
 				<td>
 					<label>
-						<input type="radio" name="gender" value="M" checked>Male
+						<input style="margin-right: 5px;" type="radio" name="gender" value="M" checked>Male
 					</label>
 					<label>
-						<input type="radio" name="gender" value="F">Female
+						<input style="margin-right: 5px;" type="radio" name="gender" value="F">Female
 					</label>
 				</td>
 			</tr>
@@ -72,7 +72,8 @@
 				</td>
 			</tr>
 			<tr>
-				<td colspan="1" align="left"><input type="button" value="Invia" onClick="Modulo()">
+				<td colspan="1" align="left"><input type="button" value="Invia" onclick="sendForm()">
+					<span id="errorMsg4"></span>
 				</td>
 				<td colspan="2" align="right"><input type="button" value="Reset" onclick="resetForm()">
 				</td>
