--- a/Week 1/Day 01/exBonus/bonus.html
+++ b/Week 1/Day 01/exBonus/bonus.html
@@ -62,7 +62,7 @@
 			<tr>
 				<td>
 					<label for="studentWorker">Student worker:</label>
-					<input type="checkbox" id="studentWorker">
+					<input type="checkbox" id="studentWorker" name="studentWorker" value="yes">
 				</td>
 			</tr>
 			<tr>
