--- a/Week 1/Day 02/ex00/calculator.html
+++ b/Week 1/Day 02/ex00/calculator.html
@@ -7,15 +7,15 @@
 		<title> ft_valerio </title>
 		<link rel="stylesheet" type="text/css" href="calculator.css">
 		<script src="calculator.js"></script>
-	</head>
-	<body>
 		<script>
-			setInterval(myFunc(), 1000);
+			setInterval(myFunc, 30000);
 
 			function myFunc() {
-				alert("Ciupa!!!!");
+				alert("Please use me...");
 			}
 		</script>
+	</head>
+	<body>
 		<div class="card">
 			<div class="content">
 				<div class="details">
