--- a/Week 1/Day 03/ex00/calculator.html
+++ b/Week 1/Day 03/ex00/calculator.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title> ft_valerio </title>
 		<link rel="stylesheet" type="text/css" href="calculator.css">
-		<script src="calculator.ts"></script>
+		<script src="calculator.js"></script>
 		<script>
 			setInterval(myFunc, 30000);
 
@@ -47,7 +47,7 @@
 							</thead>
 					</table>
 					<div class="actionButton">
-						<button onclick="calculate()">Calculate me baby!</button>
+						<button onclick="calculates_my()">Calculate me baby!</button>
 						<span id="errorMsg"></span>
 					</div>
 				</div>
