--- a/Week 1/Day 00/ex03/mySecondPage.html
+++ b/Week 1/Day 00/ex03/mySecondPage.html
@@ -112,7 +112,7 @@
 	<footer>
 		<div>
 			<hr style="width:85%; text-align:center">
-			<p>&#169Aperrone2023</p>
+			<p>&#169Aperronerdi-russmlatifi2023</p>
 		</div>
 	</footer>
 </html>
