--- a/Week 1/Day 01/exBonus/bonus.html
+++ b/Week 1/Day 01/exBonus/bonus.html
@@ -83,7 +83,7 @@
 	<footer>
 		<div>
 			<hr>
-			<p>&#169Aperrone2023</p>
+			<p>&#169Aperronerdi-russmlatifi2023</p>
 		</div>
 	</footer>
 </html>
