--- a/Week 1/Day 01/ex00/card.html
+++ b/Week 1/Day 01/ex00/card.html
@@ -66,7 +66,7 @@
 	<footer>
 		<div>
 			<hr style="width:100%; text-align:center">
-			<p>&#169Aperrone2023</p>
+			<p>&#169Aperronerdi-russmlatifi2023</p>
 		</div>
 	</footer>
 </html>
